<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/addjournal_layout_background"
    tools:context=".AddJournalActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="4dp">

                <TextView
                    android:id="@+id/post_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:text="@string/post_user_name"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/post_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="155dp"
                    android:layout_toEndOf="@+id/post_user_name"
                    android:scrollHorizontally="true"
                    android:text="@string/post_date"
                    android:textColor="@color/white"
                    android:textSize="24sp" />
            </RelativeLayout>

            <ImageView
                android:id="@+id/post_ImageView"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:src="@drawable/ic_launcher_background"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"/>

            <EditText
                android:id="@+id/post_title_ET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="8dp"
                android:autofillHints=""
                android:background="@drawable/input_outline"
                android:hint="@string/post_title"
                android:inputType="text"
                android:maxLines="1"
                android:padding="2dp"
                android:scrollHorizontally="true"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="22sp" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginBottom="10dp"
                app:cardBackgroundColor="@android:color/transparent">

                <ScrollView
                    android:id="@+id/scrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    tools:ignore="NestedScrolling">

                    <EditText
                        android:id="@+id/post_description_ET"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:autofillHints=""
                        android:background="@drawable/input_outline"
                        android:ems="10"
                        android:hint="@string/thoughts"
                        android:inputType="textMultiLine"
                        android:padding="2dp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="20sp" />

                </ScrollView>
            </androidx.cardview.widget.CardView>

            <ProgressBar
                android:id="@+id/post_ProgressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/save_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:background="@android:color/transparent"
                android:text="@string/save_post"
                android:textColor="@color/black"
                android:textSize="30sp" />
        </LinearLayout>
    </ScrollView>



</LinearLayout>